# wara9a

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  demo.py  description.md  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  setup_dev.py
docs/: dual-source-architecture.md  migration-guide.md  quickstart.md  standard-outputs.md
examples/: wara9a_auto_deps.yml  wara9a_example.yml  wara9a_self_doc.yml
scripts/: dev.bat  dev.py  dev.sh  tasks.py
tests/: __init__.py  test_dependencies.py  test_wara9a.py
wara9a/: __init__.py
wara9a/cli/: __init__.py  main.py
wara9a/connectors/: __init__.py  github.py  jira.py  local_files.py
wara9a/core/: __init__.py  config.py  connector_base.py  connector_registry.py  dependencies.py  generator.py  models.py  project.py  template_engine.py
wara9a/generators/: __init__.py  base.py  html.py  markdown.py
wara9a/templates/: __init__.py
